--- a/public/css/adaptiv.css
+++ b/public/css/adaptiv.css
@@ -4478,7 +4478,7 @@ and (min-width : 1024px) {
     }
 
     h1, .h1 {
-        font-size: 60px;
+        font-size: 3.2rem;
         color: #000;
     }
 
