--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -3734,10 +3734,11 @@ input[type="button"].btn-block {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+  flex-wrap: unset;
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  justify-content: space-around;
 }
 
 
