--- a/public/css/adaptiv.css
+++ b/public/css/adaptiv.css
@@ -5,7 +5,7 @@
 
 body {
     margin: 0;
-    font-family: 'Ossem';
+    font-family: 'Ossem', serif;
     font-size: 0.875rem;
     font-weight: 400;
     color: #212529;
@@ -61,14 +61,14 @@ and (max-device-width : 768px) {
         font-family: Ossem;
     }
     .elementor-5 .elementor-element.elementor-element-9c9b708 > .elementor-widget-container {
-        padding: 0px 15px 0px 15px;
+        padding: 0 15px 0 15px;
     }
     .elementor-5 .elementor-element.elementor-element-3796d0e6{
         padding:150px 20px 120px 20px;
     }
     .elementor-5 .elementor-element.elementor-element-153200c6 {
-        margin-top: 0px;
-        margin-bottom: 0px;
+        margin-top: 0;
+        margin-bottom: 0;
         padding: 75px 25px 75px 25px;
     }
     .elementor-5 .elementor-element.elementor-element-3796d0e6 {
@@ -77,7 +77,7 @@ and (max-device-width : 768px) {
         background-repeat: no-repeat;
         background-size: cover;
         transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
-        padding: 100px 0px 100px 0px;
+        padding: 100px 0 100px 0;
     }
     .elementor-5 .elementor-element.elementor-element-153200c6{
         background-color:#000000;
@@ -1129,16 +1129,15 @@ and (orientation : portrait){
     }
     .opt_bl{
         float: left;
-        width: 50%;
+        width: 33%;
         min-height: 50px;
         font-family: 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
         padding: 5px;
         color: #78654f;
         text-align: center;
-        margin-bottom: 25px;
     }
     .opt_bl img{
-        width: 75px;
+        width: 50px;
         margin: 0 auto;
     }
     .opt_bl span{
@@ -1147,7 +1146,8 @@ and (orientation : portrait){
         width: 100%;
         text-align: center;
         display: block;
-        font-size: 1rem;
+        font-size: 0.7rem;
+        line-height: 1.2;
     }
     .item_opt p{
         margin-bottom: 15px;
@@ -1478,7 +1478,7 @@ and (orientation : portrait){
         padding-bottom: 15px;
     }
     h1, .h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     h2, .h2 {
         font-size: 1rem;
@@ -1702,6 +1702,7 @@ and (max-device-width : 992px)
         font-family: 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
         padding: 5px;
         color: #78654f;
+        display: flex;
     }
     .opt_bl span{
         padding-left: 5px;
@@ -5344,7 +5345,6 @@ html {
 .text_my_style{
     line-height: 1.5rem;
     font-size: 16px;
-    padding: 0px 20px 0px 20px;
 }
 
 .text_my_style p{
@@ -5423,9 +5423,8 @@ body.modal-loading {
     background-image: url("./images/ico-headline-decor.svg");
     background-size: 207px 20px;
     margin: 0 auto;
-    margin-top: 0px;
     margin-bottom: 0px;
-    padding-top: 0px;
+    padding-top: 0;
     padding-bottom: 20px;
     background-repeat: no-repeat;
     margin-bottom: 20px;
@@ -5452,11 +5451,11 @@ body.modal-loading {
 .product-pack.type-bag {
     max-width: 100px;
     background: url("./images/pack-type-bag.png") no-repeat;
+    width: 100px;
+    height: 106px;
     background-size: auto auto;
-    background-size: 100% auto;
 }
 .option .product-pack {
-    max-width: 80px;
     margin-bottom: 10px;
 }
 .product-pack .pack-inner span {
@@ -5535,11 +5534,11 @@ body.modal-loading {
 
 .map-wrapper {
     float: left;
-    width: 60%;
+    width: 100%;
 }
 .map-info {
     float: left;
-    width: 40%;
+    width: 100%;
     overflow-y: scroll;
     height: 500px;
 }
@@ -5612,7 +5611,7 @@ body.modal-loading {
 
 #proces{
     background: url(images/proces.gif) no-repeat;
-    background-position-x: 0%;
+    background-position-x: 0;
     background-position-y: 0%;
     display: none;
     height: 63px;
@@ -5661,4 +5660,7 @@ body.modal-loading {
     width: 100%;
     height: 60px;
     padding: 0 20px;
+}
+.tab_info {
+    margin-top: 20px;
 }
