--- a/public/css/adaptiv.css
+++ b/public/css/adaptiv.css
@@ -497,6 +497,15 @@ and (max-device-width : 768px) {
         line-height: 1.3;
         color: #ffffff;
     }
+    .elementor-shape {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        line-height: 0;
+        direction: ltr;
+        z-index: 1;
+    }
 }
 
 /* iPhone 4 ----------- */
@@ -1051,6 +1060,15 @@ and (orientation : landscape){
         text-align: center;
         width: 100%;
     }
+    .elementor-shape {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        line-height: 0;
+        direction: ltr;
+        z-index: 1;
+    }
 }
 
 
@@ -1140,6 +1158,17 @@ and (orientation : portrait){
         width: 50px;
         margin: 0 auto;
     }
+    .opt_name_view_img {
+        text-transform: capitalize;
+        margin-top: 50px;
+        width: 100%;
+        float: left;
+        margin-bottom: 35px;
+        font-size: 35px;
+        font-family: Ossem, serif;
+        color: #d0152d;
+        text-align: center;
+    }
     .opt_bl span{
         padding-left: 5px;
         padding-right: 5px;
@@ -1148,6 +1177,17 @@ and (orientation : portrait){
         display: block;
         font-size: 0.7rem;
         line-height: 1.2;
+        height: 50px;
+    }
+    #myImg {
+        position: absolute;
+        bottom: 0;
+        right: 60px;
+        display: block;
+        width: 100px;
+        height: 100px;
+        border: 3px solid #d0152d;
+        border-radius: 50%;
     }
     .item_opt p{
         margin-bottom: 15px;
@@ -1220,6 +1260,11 @@ and (orientation : portrait){
     .elementor-5 .elementor-element.elementor-element-dc4b6a7 {
         padding: 75px 0 75px 0px;
     }
+    .elementor-5 .elementor-element.elementor-element-dc4b6a7 > .elementor-shape-top svg{
+        width:calc(100% + 1.3px);
+        height:25px;
+    }
+
     .elementor-5 .elementor-element.elementor-element-34c1c606{
         padding:0px 20px 50px 20px;
     }
@@ -1509,7 +1554,7 @@ and (orientation : portrait){
         background-repeat:no-repeat;
         background-size:cover;
         transition:background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
-        padding:45px 0 50px 0px;
+        padding:60px 0 50px 0px;
     }
     .elementor-5 .elementor-element.elementor-element-title_post > .elementor-background-overlay{
         /*background-image:url("https://websitedemos.net/alex06/wp-content/uploads/sites/192/2018/04/overlay-01-free-img.png");*/
@@ -1629,6 +1674,22 @@ and (orientation : portrait){
         text-align: center;
         width: 100%;
     }
+    .elementor-shape {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        line-height: 0;
+        direction: ltr;
+        z-index: 1;
+    }
+    .nav-tabs .nav-link {
+        border: 1px solid transparent;
+        border-top-left-radius: 0.25rem;
+        padding: 15px;
+        text-transform: uppercase;
+        border-top-right-radius: 0.25rem;
+    }
 }
 
 
@@ -1637,7 +1698,23 @@ and (orientation : portrait){
 and (min-device-width : 768px)
 and (max-device-width : 992px)
  {
-
+    .nav-tabs .nav-link {
+        border: 1px solid transparent;
+        border-top-left-radius: 0.25rem;
+        padding: 15px;
+        text-transform: uppercase;
+        border-top-right-radius: 0.25rem;
+    }
+    #myImg {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: block;
+        width: 170px;
+        height: 170px;
+        border: 3px solid #d0152d;
+        border-radius: 50%;
+    }
     .sticky-custom-logo {
         /*opacity: 0.5;*/
         border: 2px solid #ffffff;
@@ -2137,6 +2214,26 @@ and (max-device-width : 992px)
         margin-right: -15px;
         margin-left: -15px;
     }
+    .elementor-shape {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        line-height: 0;
+        direction: ltr;
+        z-index: 1;
+    }
+    .opt_name_view_img{
+        text-transform: capitalize;
+        margin-top: 15px;
+        width: 100%;
+        float: left;
+        margin-bottom: 35px;
+        font-size: 35px;
+        font-family: Ossem;
+        color: #d0152d;
+        text-align: center;
+    }
 }
 
 
@@ -2146,7 +2243,34 @@ and (max-device-width : 992px)
 and (min-device-width : 992px)
 and (orientation : landscape)
 {
-
+    .nav-tabs .nav-link {
+        border: 1px solid transparent;
+        border-top-left-radius: 0.25rem;
+        padding: 15px;
+        text-transform: uppercase;
+        border-top-right-radius: 0.25rem;
+    }
+    .opt_name_view_img{
+        text-transform: capitalize;
+        margin-top: 15px;
+        width: 100%;
+        float: left;
+        margin-bottom: 35px;
+        font-size: 35px;
+        font-family: Ossem;
+        color: #d0152d;
+        text-align: center;
+    }
+    #myImg {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: block;
+        width: 170px;
+        height: 170px;
+        border: 3px solid #d0152d;
+        border-radius: 50%;
+    }
     .sticky-custom-logo {
         /*opacity: 0.5;*/
         border: 2px solid #ffffff;
@@ -2654,6 +2778,15 @@ and (orientation : landscape)
         margin-left: -15px;
         justify-content: center;
     }
+    .elementor-shape {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        line-height: 0;
+        direction: ltr;
+        z-index: 1;
+    }
 }
 
 /* iPadsPro (portrait)
@@ -2662,7 +2795,34 @@ and (orientation : landscape)
 and (min-device-width : 992px)
 and (orientation : portrait)
 {
-
+    .nav-tabs .nav-link {
+        border: 1px solid transparent;
+        border-top-left-radius: 0.25rem;
+        padding: 15px;
+        text-transform: uppercase;
+        border-top-right-radius: 0.25rem;
+    }
+    .opt_name_view_img{
+        text-transform: capitalize;
+        margin-top: 15px;
+        width: 100%;
+        float: left;
+        margin-bottom: 35px;
+        font-size: 35px;
+        font-family: Ossem;
+        color: #d0152d;
+        text-align: center;
+    }
+    #myImg {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: block;
+        width: 170px;
+        height: 170px;
+        border: 3px solid #d0152d;
+        border-radius: 50%;
+    }
     .sticky-custom-logo {
         /*opacity: 0.5;*/
         border: 2px solid #ffffff;
@@ -3155,6 +3315,15 @@ and (orientation : portrait)
         margin-right: -15px;
         margin-left: -15px;
     }
+    .elementor-shape {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        line-height: 0;
+        direction: ltr;
+        z-index: 1;
+    }
 }
 
 /* iPads (landscape) ---iPads (пейзаж)-------- */
@@ -3163,7 +3332,27 @@ and (min-device-width : 992px)
 and (max-device-width : 1024px)
 and (orientation : landscape) {
     /* Styles */
-
+    .opt_name_view_img{
+        text-transform: capitalize;
+        margin-top: 15px;
+        width: 100%;
+        float: left;
+        margin-bottom: 35px;
+        font-size: 35px;
+        font-family: Ossem;
+        color: #d0152d;
+        text-align: center;
+    }
+    #myImg {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: block;
+        width: 170px;
+        height: 170px;
+        border: 3px solid #d0152d;
+        border-radius: 50%;
+    }
     .sticky-custom-logo {
         /*opacity: 0.5;*/
         border: 2px solid #ffffff;
@@ -3659,6 +3848,15 @@ and (orientation : landscape) {
         margin-right: -15px;
         margin-left: -15px;
     }
+    .elementor-shape {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        line-height: 0;
+        direction: ltr;
+        z-index: 1;
+    }
 }
 
 
@@ -3667,7 +3865,27 @@ and (orientation : landscape) {
 and (min-device-width : 992px)
 and (max-device-width : 1024px)
 and (orientation : portrait) {
-
+    .opt_name_view_img{
+        text-transform: capitalize;
+        margin-top: 15px;
+        width: 100%;
+        float: left;
+        margin-bottom: 35px;
+        font-size: 35px;
+        font-family: Ossem;
+        color: #d0152d;
+        text-align: center;
+    }
+    #myImg {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: block;
+        width: 170px;
+        height: 170px;
+        border: 3px solid #d0152d;
+        border-radius: 50%;
+    }
     .sticky-custom-logo {
         /*opacity: 0.5;*/
         border: 2px solid #ffffff;
@@ -4148,12 +4366,32 @@ and (orientation : portrait) {
         margin-right: -15px;
         margin-left: -15px;
     }
+    .elementor-shape {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        line-height: 0;
+        direction: ltr;
+        z-index: 1;
+    }
 }
 
 
 /* Desktops and laptops ---Настольные компьютеры и ноутбуки-------- */
 @media only screen
 and (min-width : 1024px) {
+    #myImg {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: block;
+        width: 170px;
+        height: 170px;
+        border: 3px solid #d0152d;
+        border-radius: 50%;
+    }
+
     .ast-flex {
         align-content: center;
         flex-wrap: unset;
@@ -4696,6 +4934,17 @@ and (min-width : 1024px) {
         margin-left: -15px;
         justify-content: center;
     }
+    .opt_name_view_img{
+        text-transform: capitalize;
+        margin-top: 15px;
+        width: 100%;
+        float: left;
+        margin-bottom: 35px;
+        font-size: 35px;
+        font-family: Ossem;
+        color: #d0152d;
+        text-align: center;
+    }
 }
 
 
@@ -4703,6 +4952,17 @@ and (min-width : 1024px) {
 @media only screen
 and (min-width : 1824px) {
     /* Styles */
+    .opt_name_view_img{
+        text-transform: capitalize;
+        margin-top: 15px;
+        width: 100%;
+        float: left;
+        margin-bottom: 35px;
+        font-size: 35px;
+        font-family: Ossem;
+        color: #d0152d;
+        text-align: center;
+    }
     .ast-main-header-bar-alignment {
         display: block;
     }
@@ -4719,6 +4979,17 @@ and (min-width : 1824px) {
         margin-left: -15px;
         justify-content: center;
     }
+    #myImg {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: block;
+        width: 170px;
+        height: 170px;
+        border: 3px solid #d0152d;
+        border-radius: 50%;
+    }
+
 }
 
 
@@ -4726,6 +4997,17 @@ and (min-width : 1824px) {
 and (min-device-width : 992px)
 and (max-device-width : 1123px)
 {
+    .opt_name_view_img{
+        text-transform: capitalize;
+        margin-top: 15px;
+        width: 100%;
+        float: left;
+        margin-bottom: 35px;
+        font-size: 35px;
+        font-family: Ossem;
+        color: #d0152d;
+        text-align: center;
+    }
     .tel_header span{
         font-size: 1.2rem;
         display: flex;
@@ -4773,6 +5055,16 @@ and (max-device-width : 1123px)
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
+    }
+    #myImg {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: block;
+        width: 170px;
+        height: 170px;
+        border: 3px solid #d0152d;
+        border-radius: 50%;
     }
 }
 
@@ -5165,17 +5457,7 @@ html {
     margin-bottom: 35px;
     display: table;
 }
-.opt_name_view_img{
-    text-transform: capitalize;
-    margin-top: 15px;
-    width: 100%;
-    float: left;
-    margin-bottom: 35px;
-    font-size: 35px;
-    font-family: Ossem;
-    color: #d0152d;
-    text-align: center;
-}
+
 :focus {outline:none !important;}
 
 
@@ -5295,16 +5577,6 @@ html {
     text-align: right;
     justify-content: space-between;
     flex-direction: row;
-}
-#myImg {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    display: block;
-    width: 170px;
-    height: 170px;
-    border: 3px solid #d0152d;
-    border-radius: 50%;
 }
 
 .tel_footer{
@@ -5683,6 +5955,7 @@ body.modal-loading {
 }
 .elementor-5 .elementor-element.elementor-element-dd06342 {
      text-align: center;
+    padding-top: 25px;
  }
 .elementor-5 .elementor-element.elementor-element-dd06342 span {
     color: #FFFFFF;
