--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5181,6 +5181,7 @@ button.close {
   display: none;
   overflow: hidden;
   outline: 0;
+  background: rgba(0, 0, 0, .5);
 }
 
 .modal-dialog {
@@ -8840,4 +8841,4 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
-}
+}g5174
